# actix-api-test

./: .env.example  Cargo.toml  docker-compose.yml
src/: cors.rs  main.rs
src/config/: config_struct.rs  config_validator.rs  mod.rs
src/errors/: http_errors.rs
src/routes/: app_controller.rs  app_service.rs  mod.rs
src/routes/auth/: auth_controller.rs  auth_service.rs  mod.rs
src/routes/users/: mod.rs  users_controller.rs  users_service.rs
