[package]
name = "actix-api-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
dotenvy = "0.15.7"
serde = "1.0.192"
serde_derive = "1.0.192"
serde_json = "1.0.108"
once_cell = "1.18.0"
chrono = "0.4"
simple_logger = "4.3.0"
log = "0.4"